--- a/site/public/index.html
+++ b/site/public/index.html
@@ -14,6 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Roboto:300,400,500,700" rel="stylesheet">
   </head>
   <body>
