--- a/site/public/index.html
+++ b/site/public/index.html
@@ -13,7 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React Native API</title>
+    <meta name="description" content="Quick lookup reference tool for React Native APIs">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Roboto:300,400,500,700" rel="stylesheet">
   </head>
